--- a/.github/workflows/vuepress.yaml
+++ b/.github/workflows/vuepress.yaml
@@ -47,7 +47,7 @@ jobs:
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
-          path: ./docs/vuepress/dist
+          path: docs/vuepress/dist
 
   # Deployment job
   deploy:
